--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylehseet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
   <script src="./app.js" defer></script>
   
   <title>Frontend Mentor | Interactive rating component</title>
@@ -15,10 +18,10 @@
 <body>
 
   <!-- Rating state start -->
-  <main class="container">
+  <main id="card-container">
     <div id="rating-state">
-      <img src="./images/icon-star.svg" alt="star icon">
-      <h1>How did we do?</h1>
+      <img class='icon-star' src="./images/icon-star.svg" alt="star icon">
+      <h1 class="header">How did we do?</h1>
 
       <p class="text">
         Please let us know how we did with your support request. All feedback is appreciated 
@@ -36,12 +39,8 @@
       <button class="submit-btn">Submit</button>
     </div>
   </main>
-
-  1 2 3 4 5
-
-  Submit
-
   <!-- Rating state end -->
+
 
   <!-- Thank you state start -->
 
@@ -57,9 +56,9 @@
   <!-- Thank you state end -->
 
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
