--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
         to help us improve our offering!
       </p>
 
-      <div class="btns">
-        <button class="btn" value="1">1</button>
-        <button class="btn" value="2">2</button>
-        <button class="btn" value="3">3</button>
-        <button class="btn" value="4">4</button>
-        <button class="btn" value="5">5</button>
-      </div>
-
-      <button class="submit-btn">Submit</button>
+      <form class="rating-form">
+        <div class="form__btns">
+          <button class="btn" value="1">1</button>
+          <button class="btn" value="2">2</button>
+          <button class="btn" value="3">3</button>
+          <button class="btn" value="4">4</button>
+          <button class="btn" value="5">5</button>
+        </div>
+  
+        <button type="submit" class="form__submit-btn">Submit</button>
+      </form>
     </div>
   </main>
   <!-- Rating state end -->
