Added thank you state

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         <button type="submit" class="form__submit-btn">Submit</button>
       </form>
     </div>
+    <div id="thanks-state">
+      <img src="./images/illustration-thank-you.svg" alt="thank-you-picture">
+
+      <p class="selection-result">You selected <span id="result"></span> out of 5</p>
+
+      <h2 class="ty-header">Thank you!</h2>
+
+      <p class="ty-content">
+        We appreciate you taking the time to give a rating. If you ever need more support, 
+        don't hesitate to get in touch!
+      </p>
+    </div>
   </main>
   <!-- Rating state end -->
 
