Finished ty state styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div id="thanks-state">
-      <img src="./images/illustration-thank-you.svg" alt="thank-you-picture">
+      <img class='ty-img' src="./images/illustration-thank-you.svg" alt="thank-you-picture">
 
       <p class="selection-result">You selected <span id="result"></span> out of 5</p>
 
