Finished mobile design

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div id="thanks-state">
       <img class='ty-img' src="./images/illustration-thank-you.svg" alt="thank-you-picture">
 
-      <p class="selection-result">You selected <span id="result"></span> out of 5</p>
+      <p class="selection-result">You selected <span id="rating-value"></span> out of 5</p>
 
       <h2 class="ty-header">Thank you!</h2>
 
